--- a/package.json
+++ b/package.json
@@ -5,11 +5,22 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "analyze": "cross-env ANALYZE=true next build",
+    "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build",
+    "build-semantic": "cd semantic && gulp build-css build-assets"
   },
   "dependencies": {
+    "cross-env": "^7.0.2",
     "next": "9.5.3",
+    "next-compose-plugins": "^2.2.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^1.2.1"
+  },
+  "devDependencies": {
+    "@next/bundle-analyzer": "^9.5.3",
+    "gulp": "^4.0.2"
   }
 }
